@@ -37,3 +37,4 @@ Changelog
 10-06-2025 ... 0.9.0.0 ... PSQT Tuning .......................... (324.4 +/- 65.1), (8 + 0.08), (N = 200), (Local)
 10-06-2025 ... 0.9.1.0 ... PSQT Tuning 2 ........................ (156.6 +/- 29.9), (8 + 0.08), (N = 400), (Local)
 10-08-2025 ... 0.9.2.0 ... PSQT Tuning 3 ........................ (54.7 +/- 19.1) , (8 + 0.08), (N = 800), (Local)
+11-17-2025 ... 0.9.3.0 ... QS SEE Pruning ....................... (11.9 +/- 8.8)  , (8 + 0.08), (SPRT, 3184),(https://sscg13.pythonanywhere.com/test/1534/)
